# mathlex

./: .gitignore  .spi.yml  CHANGELOG.md  Cargo.toml  FIRST-PRINCIPLES.md  Package.swift  README.md  build.rs  thales_mathcore_integration.md  thales_v0.9.0_requirements.md
.github/workflows/: ci.yml  release.yml  swift-ci.yml  swift-release.yml
MathLex.docc/: MathLex.md
Sources/MathLex/: MathLex.swift
Sources/MathLexRust/: SwiftBridgeCore.swift  mathlex.swift
benches/: benchmarks.rs
docs/: ast-reference.md  json-ast-schema.md  plain-text-syntax.md
examples/numericswift-integration/: ComplexEvaluator.swift  Evaluator.swift  MathLexExpression+Decodable.swift  MathLexExpression+DecodableExtra.swift  MathLexExpression.swift  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_latex_parser.rs  fuzz_roundtrip.rs  fuzz_text_parser.rs
scripts/: README.md  build-xcframework.sh
src/: ast.rs  context.rs  display.rs  error.rs  ffi.rs  latex.rs  lib.rs  metadata.rs  util.rs
src/ast/: bounds.rs  constants.rs  expression.rs  linear_algebra.rs  mod.rs  operators.rs  precedence.rs  sets.rs  tests.rs
src/display/: expression.rs  mod.rs  tests.rs  tests_expr_basic.rs  tests_expr_calculus.rs  tests_precedence.rs  tests_types.rs  (+1 more)
swift/: Package.swift  README.md
tests/: cross_roundtrip_tests.rs  latex_property_tests.proptest-regressions  latex_property_tests.rs  lenient_parsing_tests.rs  lib_tests.rs  metadata_tests.rs  property_tests.rs  real_world_examples.rs  roundtrip_tests.rs  serde_roundtrip.rs  serialization_precedence_tests.rs  set_theory_tests.rs  test_derivative_standard_notation.rs  test_plus_minus.rs  test_task24.rs  vector_calculus_tests.rs
(+112 files in other folders)
